--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "dependencies": {
     "@testing-library/dom": "^9.3.4",
     "happy-dom": "^13.2.1",
+    "json-server": "^1.0.0-beta.3",
+    "live-server": "^1.2.2",
     "vitest": "^1.2.1"
   }
 }
